# gct

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  clion_format.xml  example_recons.cpp  example_recons.h  main.cpp
src/cpp/: CMakeLists.txt
src/cpp/data/: data_constraints.h  nd_array.h  nd_array_base.h  proj_meta_info.cpp  proj_meta_info.h  projection.h  projection_stack.h  recon_img.h  stat.h
src/cpp/geom/: axial_ct_geom.h  ct_geom.h  det_coords.h  det_pixel_coords.h  detector_1d.h  eigen_utils.cpp  eigen_utils.h  geom_constraints.h  geom_math.cpp  geom_math.h  proj_geom.h  projection_matrix.cpp  projection_matrix.h  recon_img_geom.h  rotation_geom.cpp  rotation_geom.h  sampling_info.h  spiral_ct_geom.h  units.h  utils.h  vec_wcs.cpp  vec_wcs.h
src/cpp/io/: enum_parser.cpp  enum_parser.h  file_utils.cpp  file_utils.h  metadata.h  string_utils.cpp  string_utils.h
src/cpp/io/file_reader/: array_file_reader.cpp  array_file_reader.h  dcm_file_reader.cpp  dcm_file_reader.h  den_file_reader.cpp  den_file_reader.h  meta_img_reader.cpp  meta_img_reader.h  raw_data_file_reader.cpp  raw_data_file_reader.h
src/cpp/io/file_writer/: den_file_writer.h  meta_img_file_writer.cpp  meta_img_file_writer.h  raw_data_file_writer.h
src/cpp/io/geom_reader/: proj_geom_cb_factory.cpp  proj_geom_cb_factory.h  proj_geom_factory.h  proj_geom_factory_params.cpp  proj_geom_factory_proj_mat.cpp  proj_geom_fb_factory.cpp  proj_geom_fb_factory.h  proj_mat_reader.h
src/cpp/io/img_writer/: img_writer.cpp  img_writer.h
src/cpp/io/parameters/: filt_parameters.h  proj_geom_params.h
src/cpp/io/proj_reader/: projection_reader.cpp  projection_reader.h
src/cpp/numeric/: comparator.h
src/cpp/recon/: check_validity.h  proj_filt_kernel.cpp  proj_filt_kernel.h  ramp_filter.cpp  ramp_filter.h
src/cuda/: CMakeLists.txt
src/cuda/data/: array_2d_dev.cuh  copy_host_dev.cuh  dev_mem.cuh  dev_mem_texture.cuh  host_mem_pinned.cuh  nd_array_dev.cuh  nd_array_texture.cuh  projection.cuh  projection_stack.cuh  read_write_mem_resource.cuh  recon_img.cuh  stat.cuh  unified_mem.cuh  vector_dev.cuh
src/cuda/geom/: coord_trans_img.cuh  coord_trans_proj.cuh  ct_geom_dev.cu  ct_geom_dev.cuh  det_geom_dev.cuh  proj_geom_dev.cuh  vec_wcs_math.cuh
src/cuda/numeric/: arithm_functors.cuh  comparator.cuh  constants.cuh  vec2d_math.cuh  vec3d_math.cuh
src/cuda/recon/: back_proj.cuh  cos_weighting.cuh  fdk_axial.cuh  fdk_spiral.cuh  forward_proj.cuh  parker_weighting.cu  parker_weighting.cuh  ramp_filtering_fft.cu  ramp_filtering_fft.cuh  recon_wrappers.cu  recon_wrappers.cuh
src/cuda/utils/: check_error.cu  check_error.cuh  cuda_config.cu  cuda_config.cuh  timer.cu  timer.cuh
test/: matchers.h  matchers_test.cpp  test_data.h
test/cpp/: CMakeLists.txt
test/cpp/data/: nd_array_test.cpp  nd_array_test_fix.h  proj_meta_info_test.cpp  projection_stack_test.cpp  projection_test.cpp  recon_img_test.cpp  stat_test.cpp
test/cpp/geom/: ct_geom_test.cpp  ct_geom_test_fix.cpp  ct_geom_test_fix.h  detector_1d_test.cpp  geom_math_test.cpp  img_dim_test.cpp  proj_geom_factory_params_test.cpp  proj_geom_factory_proj_mat_test.cpp  proj_geom_params_test_fix.h  proj_geom_test_fix.h  recon_img_geom_test.cpp  recon_img_geom_test_fix.h  rotation_geom_test.cpp  sampling_info_test.cpp  units_test.cpp  utils_test.cpp  vec_wcs_test.cpp
test/cpp/io/: eigen_utils_test.cpp  file_utils_test.cpp  projection_matrix_test.cpp  string_utils_test.cpp
test/cpp/io/file_reader/: array_file_reader_test_fix.cpp  array_file_reader_test_fix.h  array_file_reader_tests.cpp  dcm_file_reader_tests.cpp  mhd_file_reader_tests.cpp  raw_data_file_reader_tests.cpp  test_filenames.cpp  test_filenames.h
test/cpp/io/file_writer/: den_file_writer_tests.cpp  meta_img_file_writer_tests.cpp  raw_data_file_writer_tests.cpp
test/cpp/numeric/: comparator_test.cpp
test/cpp/recon/: check_validity_test.cpp
test/cuda/: CMakeLists.txt  main.cpp
test/cuda/data/: array_2d_dev_test.cu  copy_host_dev_test.cu  dev_mem_test.cu  host_mem_pinned_test.cu  nd_array_dev_test.cu  nd_array_dev_test_fix.cuh  stat_test.cu  unified_mem_test.cu  vector_dev_test.cu
test/cuda/geom/: coord_trans_img_test.cu  coord_trans_proj_test.cu  vec_wcs_math_test.cu
test/cuda/img/: proj_img_test.cu  recon_img_test.cu
test/cuda/numeric/: comparator_test.cu
test/cuda/recon/: fdk_axial_tests.cu  parker_weighting_test.cu
